<resources>
    <string name="app_name">Calculadora</string>
    <string name="n1">Digite o primeiro número</string>
    <string name="n2">Digite o segundo número</string>
    <string name="somar">Somar</string>
    <string name="subtrair">Subtrair</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="res">Resultado</string>
</resources>