<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="206dp"
        android:layout_height="433dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/n1"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/n2"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCalc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Somar"
            android:text="@string/somar" />

        <Button
            android:id="@+id/btnCalc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Subtrair"
            android:text="@string/subtrair" />

        <Button
            android:id="@+id/btnCalc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Multiplicar"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/btnCalc4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Dividir"
            android:text="@string/dividir" />

        <EditText
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/res"
            android:inputType="number" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>